[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Exploration.gd" type="Script" id=1]
[ext_resource path="res://src/RightClickReactButton.gd" type="Script" id=2]

[node name="Exploration" type="Panel"]
self_modulate = Color( 1, 1, 1, 0.74902 )
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 246.066
margin_top = 151.74
margin_right = 769.066
margin_bottom = 604.74

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 523.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="ScrollContainer/VBoxContainer"]
visible = false
margin_right = 523.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="HirePanel" type="Panel" parent="."]
margin_left = 37.42
margin_top = 97.1246
margin_right = 1072.42
margin_bottom = 971.125

[node name="VBoxContainer" type="VBoxContainer" parent="HirePanel"]
margin_left = 41.0
margin_top = 59.0
margin_right = 445.0
margin_bottom = 810.0

[node name="Button" type="Button" parent="HirePanel/VBoxContainer"]
visible = false
margin_right = 404.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
align = 0
script = ExtResource( 2 )

[node name="Price" type="Label" parent="HirePanel/VBoxContainer/Button"]
margin_left = 326.0
margin_top = 13.0
margin_right = 391.0
margin_bottom = 37.0
align = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HirePanel"]
margin_left = 510.909
margin_top = 52.3602
margin_right = 969.909
margin_bottom = 812.36

[node name="Button" type="Button" parent="HirePanel"]
margin_left = 641.016
margin_top = 725.11
margin_right = 889.016
margin_bottom = 782.11
text = "Hire"

[node name="QuestPanel" type="Panel" parent="."]
visible = false
margin_left = 40.7423
margin_top = 91.4415
margin_right = 1075.74
margin_bottom = 965.442

[node name="VBoxContainer" type="VBoxContainer" parent="QuestPanel"]
margin_left = 41.0
margin_top = 59.0
margin_right = 445.0
margin_bottom = 810.0

[node name="Button" type="Button" parent="QuestPanel/VBoxContainer"]
visible = false
margin_right = 404.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="RichTextLabel" type="RichTextLabel" parent="QuestPanel"]
margin_left = 510.909
margin_top = 52.3602
margin_right = 969.909
margin_bottom = 812.36

[node name="ShopPanel" type="Panel" parent="."]
visible = false
margin_left = 40.7423
margin_top = 91.4415
margin_right = 1075.74
margin_bottom = 965.442

[node name="VBoxContainer" type="VBoxContainer" parent="ShopPanel"]
margin_left = 41.0
margin_top = 59.0
margin_right = 445.0
margin_bottom = 810.0

[node name="Button" type="Button" parent="ShopPanel/VBoxContainer"]
visible = false
margin_right = 404.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="RichTextLabel" type="RichTextLabel" parent="ShopPanel"]
margin_left = 510.909
margin_top = 52.3602
margin_right = 969.909
margin_bottom = 812.36

